[package]
name = "tx_orderer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tx_orderer"
path = "src/bin/tx_orderer.rs"

[[bin]]
name = "database_migrator"
path = "src/bin/database_migrator.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.4.7", features = ["derive"] }
const-hex = "1.12"
ethers-core = "2.0"
local-ip-address = "0.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.127"
sha3 = "0.10"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.12.4", features = ["json"] }
dashmap = "5.4"

# Profiler
pyroscope = "0.5.4"
pyroscope_pprofrs = "0.2"

skde = { git = "https://github.com/radiusxyz/skde", rev="d46d66fa1e59aa5d555a1124cf3b89cef4753fd1"}
# radius-sdk = { git = "https://github.com/radiusxyz/radius-sdk-rs", tag = "v0.1", features = ["full"] }
radius-sdk = { git = "https://github.com/radiusxyz/radius-sdk-rs", rev = "adc39b020a876a0325b977c295bda1b10175720a", features = ["full"] }

futures = "0.3"