[package]
name = "seeder"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true, features = ["singleton"] }
json-rpc = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
ssal = { workspace = true, features = ["avs"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap ={ workspace = true }
alloy = { workspace = true }
futures = { workspace = true }