[package]
name = "seeder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "seeder"
path = "src/bin/seeder.rs"

[dependencies]
database = { workspace = true, features = ["singleton"] }
json-rpc = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ssal = { workspace = true, features = ["avs"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap ={ workspace = true }
alloy = { workspace = true }
futures = { workspace = true }
radius-sequencer-sdk = { workspace = true }
sequencer = { workspace = true }