[package]
name = "sequencer-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait = "0.1.73"
axum = "0.7"
bincode = "1.3.3"
jsonrpsee = { version = "0.22", features = ["full"] }
rocksdb = "0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"