[package]
name = "sequencer-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait = "0.1.73"
axum = "0.7"
bincode = "1.3.3"
ethers = "2.0"
hyper = "0.14.27"
jsonrpsee = { version = "0.22", features = ["full"] }
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["blocking"] }
rocksdb = "0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"