[package]
name = "sequencer-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
sequencer-core = { path = "../sequencer-core" }
sequencer-database = { path = "../sequencer-database" }
sequencer-json-rpc = { path = "../sequencer-json-rpc" }
sequencer-macros = { path = "../sequencer-macros" }