[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sequencer"
path = "src/bin/sequencer.rs"

[dependencies]
block-commitment = { workspace = true }
database = { workspace = true, features = ["singleton"] }
futures = { workspace = true }
json-rpc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssal = { workspace = true, features = ["avs"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
radius-sequencer-sdk = { workspace = true }
ethers = "2.0"