[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rand = { workspace = true }

#eigen-rs
eigen-client-elcontracts = {git = "https://github.com/supernovahs/eigensdk-rs", rev = "e700fa2"}
eigen-types = {git = "https://github.com/supernovahs/eigensdk-rs", rev = "e700fa2"}
eigen-utils = {git = "https://github.com/supernovahs/eigensdk-rs", rev = "e700fa2"}

#alloy
alloy-chains = "0.1.15"
alloy-primitives = "0.7.2"
alloy-dyn-abi = "0.7.2"
alloy-sol-types = "0.7.2"
alloy-rlp = "0.3.4"
alloy-trie = "0.3.1"
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93", default-features = false, features = [
    "reqwest","ws"
] }
alloy-transport-http = {git = "https://github.com/alloy-rs/alloy", rev = "cc68b93"}
alloy-eips = { git = "https://github.com/alloy-rs/alloy", default-features = false, rev = "cc68b93" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-contract = {git = "https://github.com/alloy-rs/alloy", rev = "cc68b93" }
alloy-transport =  {git = "https://github.com/alloy-rs/alloy", rev = "cc68b93"}
alloy-transport-ws = {git = "https://github.com/alloy-rs/alloy", rev = "cc68b93"}
alloy-rpc-client = {git = "https://github.com/alloy-rs/alloy", rev = "cc68b93"}