[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait = "0.1.73"
bincode = "1.3.3"
# ethers = { version = "2.0", features = ["abigen", "ws"] }
hyper = "0.14.27"
jsonrpsee = { version = "0.22", features = ["full"] }
rand = "0.8.5"
rocksdb = "0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"