[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait = "0.1.73"
bincode = "1.3.3"
jsonrpsee = { version = "0.22", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
toml = "0.8.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"