[package]
name = "ssal"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
alloy = { version = "0.1.1", features = ["full", "signer-keystore"], optional = true }
futures = { workspace = true }
json-rpc = { workspace = true, optional = true }
pin-project = "1.1.5"
rand = { workspace = true }
serde = { workspace = true, optional = true }

[features]
ethereum = ["alloy", "json-rpc", "serde"]