[package]
name = "ssal"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
alloy = { version = "0.1.1", features = ["full", "signer-keystore", "signer-local"], optional = true }
chrono = "0.4.38"
futures = { workspace = true }
json-rpc = { workspace = true }
pin-project = "1.1.5"
rand = { workspace = true }
serde = { workspace = true }

[features]
avs = ["alloy"]