[package]
name = "rollup-avs"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true, features = ["singleton"] }
json-rpc = { workspace = true }
ssal = { workspace = true, features = ["ethereum"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }