[package]
name = "seeder-avs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
database = { workspace = true }
serde = { workspace = true }
ssal = { workspace = true, features = ["ethereum"] }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }