[package]
name = "seeder-avs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
database = { workspace = true, features = ["singleton"] }
json-rpc = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
ssal = { workspace = true, features = ["ethereum"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }