[package]
name = "sequencer-avs"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { workspace = true }
json-rpc = { workspace = true }
serde = { workspace = true }
ssal = { workspace = true, features = ["ethereum"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }