[package]
name = "sequencer-avs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-client-avs"
path = "src/bin/test_client.rs"

[[bin]]
name = "test-rollup-avs"
path = "src/bin/test_rollup.rs"

[[bin]]
name = "sequencer-avs"
path = "src/bin/sequencer.rs"

[[bin]]
name = "deregister"
path = "src/bin/shutdown.rs"

[dependencies]
block-commitment = { workspace = true }
database = { workspace = true, features = ["singleton"] }
futures = { workspace = true }
json-rpc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
ssal = { workspace = true, features = ["avs"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }